Fixed bug #50195 (pg_copy_to() fails when table name contains schema).